# folder_qiniu_backup

./: .env.dist  .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: archive.rs  lib.rs  main.rs  qiniu.rs  tools.rs
src/archive/: archive_error.rs  zip_folder.rs
src/qiniu/: delete_file.rs  get_admin_token.rs  get_encoded_entry_uri.rs  get_file_status.rs  get_upload_token.rs  put_policy.rs  upload_file_to_server.rs
src/tools/: clean_old_backup_files.rs
