[package]
name = "folder_qiniu_backup"
version = "0.1.0"
authors = ["liuguang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
zip = "0.5"
reqwest = { version = "0.11", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0"
hmac = "0"
sha-1 = "0"
dotenv = "0"
chrono = "0.4"