[package]
name = "folder_qiniu_backup"
version = "0.1.1"
authors = ["liuguang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
zip = { version = "0.6.6", default-features = false, features = ["bzip2"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "multipart",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hmac = "0.12"
sha-1 = "0.10"
dotenv = "0.15"
chrono = "0.4"
